--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,8 @@
 	<script src="/javascripts/angular.min.js"></script>
 	<script src="/javascripts/angular-route.min.js"></script>
 	<script src="/javascripts/angular-ui-router.js"></script>
+	<script src="/javascripts/angular-messages.js"></script>
 	<script src="/controler/app.js"></script>
 	<script src="/controler/listCtrl.js"></script>
+	<script src="/controler/addCtrl.js"></script>
 </html>
